Refactor: Move shared files to common, fix tutor slots functionality

--- a/frontend/common/dashboard.html
+++ b/frontend/common/dashboard.html
@@ -6,13 +6,13 @@
     <title>User Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="dashboard-container">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="img/logo.png" alt="Logo">
+                <img src="../img/logo.png" alt="Logo">
                 <div class="user-name" id="sidebarUserName">User</div>
             </div>
             <div class="sidebar-menu">
@@ -24,7 +24,7 @@
                 <a href="#"><i class="fa fa-envelope"></i> Messages</a>
                 <a href="#"><i class="fa fa-graduation-cap"></i> Grades</a>
                 <a href="#"><i class="fa fa-wrench"></i> Tools</a>
-                <a href="../backend/logout.php"><i class="fa fa-sign-out-alt"></i> Sign Out</a>
+                <a href="../../backend/common/logout.php"><i class="fa fa-sign-out-alt"></i> Sign Out</a>
             </div>
             <div class="sidebar-footer">
                 <div>Privacy &nbsp; | &nbsp; Terms &nbsp; | &nbsp; Accessibility</div>
@@ -43,22 +43,22 @@
                 <p>Full functionality will be added soon. Thank you for your patience and support!</p>
                 <p>Special thanks to Mohammadamin Dadras for his mentorship and guidance.</p>
                 <div id="tutorLinks" class="links-block" style="display: none;">
-                    <a href="create_slot.html">Create Slot</a>
-                    <a href="tutor_slots.html">My Slots</a>
-                    <a href="tutors_slots.html">All Slots</a>
-                    <a href="my_appointments.html">Who Will Come</a>
+                    <a href="../tutor/create_slot.html">Create Slot</a>
+                    <a href="../tutor/tutor_slots.html">My Slots</a>
+                    <a href="../tutor/tutors_slots.html">All Slots</a>
+                    <a href="../tutor/my_appointments.html">Who Will Come</a>
                 </div>
                 <div id="studentLinks" class="links-block" style="display: none;">
-                    <a href="student_slots.html">Available Bookings</a>
-                    <a href="student_my_slots.html">My Bookings</a>
+                    <a href="../student/student_slots.html">Available Bookings</a>
+                    <a href="../student/student_my_slots.html">My Bookings</a>
                 </div>
-                <a href="../backend/logout.php" class="logout-link">Logout</a>
+                <a href="../../backend/common/logout.php" class="logout-link">Logout</a>
     </div>
         </main>
     </div>
     <script>
         // Fetch user data from the backend
-        fetch('../backend/dashboard.php')
+        fetch('../../backend/common/dashboard.php')
             .then(response => response.json())
             .then(data => {
                 document.getElementById('userName').textContent = data.name + ' ' + data.surname;
@@ -78,9 +78,4 @@
             });
     </script>
 </body>
-</html>
-
-
-
-
-
+</html> 
