--- a/frontend/student/student_my_slots.html
+++ b/frontend/student/student_my_slots.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="overlay"></div>
@@ -16,13 +16,13 @@
             <h2>Your Booked Timeslots</h2>
             <div id="my-slots">Loading...</div>
             <div class="main-menu-link">
-                <a href="dashboard.html">Main Menu</a>
+                <a href="../common/dashboard.html">Main Menu</a>
             </div>
         </div>
     </div>
     <script>
         function loadMySlots() {
-            fetch('../backend/student_my_slots.php')
+            fetch('../../backend/student/my_slots.php')
                 .then(res => res.json())
                 .then(data => {
                     const container = document.getElementById('my-slots');
@@ -55,7 +55,7 @@
         function unenroll(timeslotId) {
             if (!confirm('Are you sure you want to cancel the booking?')) return;
 
-            fetch('../backend/student_unenroll.php', {
+            fetch('../../backend/student/unenroll.php', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/x-www-form-urlencoded'},
                 body: 'timeslot_id=' + encodeURIComponent(timeslotId)
@@ -73,4 +73,4 @@
         window.onload = loadMySlots;
     </script>
 </body>
-</html>
+</html> 
