--- a/frontend/tutor/my_appointments.html
+++ b/frontend/tutor/my_appointments.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="overlay"></div>
@@ -32,23 +32,23 @@
                 </div>
             </div>
             <div class="main-menu-link">
-                <a href="dashboard.html">Main Menu</a>
+                <a href="../common/dashboard.html">Main Menu</a>
             </div>
         </div>
     </div>
     <script>
-        fetch('../backend/dashboard.php')
+        fetch('../../backend/common/dashboard.php')
             .then(response => response.json())
             .then(data => {
                 if (data.role !== 'tutor') {
-                    window.location.href = 'dashboard.html';
+                    window.location.href = '../common/dashboard.html';
                 }
             })
             .catch(error => {
                 document.getElementById('error-message').textContent = 'Access check error';
                 document.getElementById('error-message').style.display = 'block';
             });
-        fetch('../backend/my_appointments.php')
+        fetch('../../backend/tutor/appointments.php')
             .then(response => {
                 if (!response.ok) throw new Error('Network response was not ok');
                 return response.json();
