--- a/frontend/student/student_slots.html
+++ b/frontend/student/student_slots.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Available Timeslots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h2>Select a Course</h2>
-
-    <form id="filter-form">
-        <select id="course-select" name="course_id">
-            <!-- courses will appear automatically -->
-        </select>
-        <button type="submit">Show</button>
-    </form>
-
-    <h2>Available Timeslots</h2>
-    <div id="slots"></div>
-    <div id="enroll-message"></div>
-    
-    <a href="dashboard.html">Main menu</a>
-    
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="panel">
+            <h2>Select a Course</h2>
+            <form id="filter-form">
+                <select id="course-select" name="course_id">
+                    <!-- courses will appear automatically -->
+                </select>
+                <button type="submit">Show</button>
+            </form>
+            <h2>Available Timeslots</h2>
+            <div id="slots"></div>
+            <div id="enroll-message"></div>
+            <div class="main-menu-link">
+                <a href="../common/dashboard.html">Main menu</a>
+            </div>
+        </div>
+    </div>
     <script>
         // Load the list of courses
-        fetch('../backend/courses.php')
+        fetch('../../backend/common/courses.php')
             .then(res => res.json())
             .then(courses => {
                 const select = document.getElementById('course-select');
@@ -37,7 +45,7 @@
         document.getElementById('filter-form').addEventListener('submit', function(e) {
             e.preventDefault();
             const courseId = document.getElementById('course-select').value;
-            fetch('../backend/student_slots.php?course_id=' + courseId)
+            fetch('../../backend/student/slots.php?course_id=' + courseId)
                 .then(res => res.json())
                 .then(slots => {
                     const container = document.getElementById('slots');
@@ -46,7 +54,7 @@
                         return;
                     }
 
-                    let html = '<table border="1"><tr><th>Date</th><th>Start</th><th>End</th><th>Tutor</th><th></th></tr>';
+                    let html = '<table><tr><th>Date</th><th>Start</th><th>End</th><th>Tutor</th><th></th></tr>';
                     slots.forEach(slot => {
                         html += `<tr>
                             <td>${slot.Date}</td>
@@ -66,7 +74,7 @@
             messageDiv.textContent = '';
             const data = new FormData();
             data.append('timeslot_id', timeslotId);
-            fetch('../backend/student_enroll.php', {
+            fetch('../../backend/student/enroll.php', {
                 method: 'POST',
                 body: data
             })
@@ -77,7 +85,7 @@
                     messageDiv.style.color = 'green';
 
                 } else {
-                    messageDiv.textContent = 'Request error';
+                    messageDiv.textContent = 'You are already enrolled in this slot!';
                     messageDiv.style.color = 'red';
                 }
             })
@@ -88,4 +96,4 @@
         }
     </script>
 </body>
-</html>
+</html> 
