--- a/frontend/tutor/tutor_slots.html
+++ b/frontend/tutor/tutor_slots.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Your timeslots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h2>Your timeslots</h2>
-    <div id="slots">Loading...</div>
-
-    <a href="dashboard.html">Main menu</a>
-
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="panel">
+            <h2>Your timeslots</h2>
+            <div id="slots">Loading...</div>
+            <div class="main-menu-link">
+                <a href="../common/dashboard.html">Main menu</a>
+            </div>
+        </div>
+    </div>
     <script>
         function loadSlots() {
-            fetch('../backend/tutor_slots.php')
+            fetch('../../backend/tutor/slots.php')
                 .then(response => response.json())
                 .then(data => {
                     const container = document.getElementById('slots');
@@ -22,7 +32,7 @@
                         return;
                     }
 
-                    let html = '<table border="1"><tr><th>Date</th><th>Start</th><th>End</th><th>Course</th><th></th></tr>';
+                    let html = '<table><tr><th>Date</th><th>Start</th><th>End</th><th>Course</th><th></th></tr>';
                     data.forEach(slot => {
                         html += `<tr>
                             <td>${slot.Date}</td>
@@ -41,7 +51,7 @@
         function deleteSlot(id) {
             if (!confirm('Are you sure you want to delete this slot?')) return;
 
-            fetch('../backend/delete_slot.php', {
+            fetch('../../backend/tutor/delete_slot.php', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/x-www-form-urlencoded'},
                 body: 'timeslot_id=' + encodeURIComponent(id)
@@ -59,4 +69,4 @@
         window.onload = loadSlots;
     </script>
 </body>
-</html>
+</html> 
