Complete project implementation: Add all backend and frontend files, database structure, and configuration

--- a/frontend/common/dashboard.html
+++ b/frontend/common/dashboard.html
@@ -17,10 +17,10 @@
             </div>
             <div class="sidebar-menu">
                 <a href="#" class="active"><i class="fa fa-university"></i> Institution Page</a>
+                <a href="schedule.html"><i class="fa fa-calendar"></i> Schedule</a>
                 <a href="#"><i class="fa fa-user"></i> <span id="sidebarUserShort"></span></a>
                 <a href="#"><i class="fa fa-bolt"></i> Activity</a>
                 <a href="#"><i class="fa fa-book"></i> Courses</a>
-                <a href="#"><i class="fa fa-calendar"></i> Calendar</a>
                 <a href="#"><i class="fa fa-envelope"></i> Messages</a>
                 <a href="#"><i class="fa fa-graduation-cap"></i> Grades</a>
                 <a href="#"><i class="fa fa-wrench"></i> Tools</a>
