Add complete admin panel with authentication and dashboard

--- a/frontend/common/login.html
+++ b/frontend/common/login.html
@@ -37,6 +37,11 @@
             <div class="forgot"><a href="#">Forgot Password?</a></div>
             <div id="login-message"></div>
             <p style="margin-top:18px;">No account? <a href="register.html" style="color:#4a90e2;">Register</a></p>
+            <p style="margin-top:10px; text-align:center;">
+                <a href="../admin/login.html" style="color:#667eea; font-size:12px; text-decoration:none;">
+                    <i class="fas fa-shield-alt"></i> Admin Panel
+                </a>
+            </p>
         </div>
         <!-- Welcome Panel -->
         <div class="panel center">
