Add course management system with CRUD operations and appointment validation

--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -124,7 +124,7 @@
                     <div style="font-weight: 600; margin-bottom: 4px;">User Management</div>
                     <div style="font-size: 12px; color: #64748b;">Manage students, tutors, and administrators</div>
                 </button>
-                <button class="action-card" onclick="alert('Course Management - Coming Soon!')">
+                <button class="action-card" onclick="window.location.href='course_management.html'">
                     <div style="font-size: 24px; margin-bottom: 8px;">📚</div>
                     <div style="font-weight: 600; margin-bottom: 4px;">Course Management</div>
                     <div style="font-size: 12px; color: #64748b;">Manage courses and curriculum</div>
