--- a/frontend/common/dashboard.html
+++ b/frontend/common/dashboard.html
@@ -6,13 +6,13 @@
     <title>User Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
     <div class="dashboard-container">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="../img/logo.png" alt="Logo">
+                <img src="../assets/logo.png" alt="Logo">
                 <div class="user-name" id="sidebarUserName">User</div>
             </div>
             <div class="sidebar-menu">
