--- a/frontend/common/register.html
+++ b/frontend/common/register.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
     <div class="overlay"></div>
     <div class="container">
         <!-- Register Panel -->
         <div class="panel left">
-            <img src="../img/logo.png" alt="Stamford Logo" class="logo">
+            <img src="../assets/logo.png" alt="Stamford Logo" class="logo">
             <h2>Register for Stamford CAE</h2>
             <form id="register-form">
                 <div class="form-group">
