--- a/frontend/common/schedule.html
+++ b/frontend/common/schedule.html
@@ -12,7 +12,7 @@
     <div class="dashboard-container">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="../img/logo.png" alt="Logo">
+                <img src="../assets/logo.png" alt="Logo">
                 <div class="user-name" id="sidebarUserName">User</div>
             </div>
             <div class="sidebar-menu">
