--- a/frontend/student/my_appointments.html
+++ b/frontend/student/my_appointments.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
     <div class="dashboard-container">
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
-                <img src="img/logo.png" alt="Stamford Logo" class="logo">
+                <img src="../assets/logo.png" alt="Stamford Logo" class="logo">
                 <h3>CAE Portal</h3>
             </div>
             <div class="sidebar-menu">
